bug with landscape fixed

--- a/GeoQuiz/app/src/main/res/layout-land/activity_quiz.xml
+++ b/GeoQuiz/app/src/main/res/layout-land/activity_quiz.xml
@@ -32,27 +32,22 @@
         
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:orientation="horizontal">
 
 
     <ImageButton
         android:id="@+id/previous_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
         android:src="@drawable/arrow_left"
         android:contentDescription="@string/previous_button"/>
 
-        <ImageButton
+    <ImageButton
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
             android:src="@drawable/arrow_right"
             android:contentDescription="@string/next_button"/>
-
-        </LinearLayout>
 
 </FrameLayout>
