--- a/GeoQuiz/app/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_quiz.xml
@@ -5,6 +5,12 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cheat_button" />
+
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
