--- a/GeoQuiz/app/src/main/res/layout/activity_cheat.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_cheat.xml
@@ -27,5 +27,13 @@
         android:layout_height="wrap_content"
         android:text="@string/show_answer_button"/>
 
+    <TextView
+        android:id="@+id/SDKversion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        tools:text="SdkVersion"
+        />
+
 
 </LinearLayout>
